# ros-docker

./: README.md  tenserflow.md
galactic_ws/: Dockerfile  run.sh
galactic_ws/config/: update_bashrc.sh
noetic_ws/: Dockerfile  build.sh  run.sh  setup_permissions.sh
noetic_ws/config/: entrypoint.sh  slcanUp.sh
noetic_ws/src/can-init-script/: README.md  canUp  vcanUp
noetic_ws/src/spin_base_pkg/: CHANGELOG.md  CMakeLists.txt  LICENSE.md  package.xml
noetic_ws/src/spin_base_pkg/include/spin_base/: CMakeLists.txt
noetic_ws/src/spin_base_pkg/include/spin_base/include/spin_base/: ISpinDevice.hpp  canopen_msg.hpp  spin_base.h  threaded_flag.hpp  threaded_queue.hpp  vehicle.hpp
noetic_ws/src/spin_base_pkg/include/spin_base/src/: canopen_msg.cpp  threaded_flag.cpp  vehicle.cpp
noetic_ws/src/spin_mini_cat/: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  package.xml
noetic_ws/src/spin_mini_cat/launch/: test_setup.launch
noetic_ws/src/spin_mini_cat/src/: rot_pod_node.cpp
noetic_ws/src/usv_navigation/: CMakeLists.txt  package.xml
noetic_ws/src/usv_navigation/src/: publish_thrust.cpp
